@startuml
    namespace com.hack23.sonar.cloudformation.parser {

        class CfnNagReportReader [[CfnNagReportReader.html]] {
            +readReport(InputStream): CfnNagReport
        }

        class CfnNagScanReport [[CfnNagScanReport.html]] {
            +getFilename(): String
            +setFilename(String): void
        }

        class CfnNagReport [[CfnNagReport.html]] {
            +getFailure_count(): int
            +setFailure_count(int): void
        }

        class CfnNagViolation [[CfnNagViolation.html]] {
            +getId(): String
            +setId(String): void
            +getType(): String
            +setType(String): void
            +getMessage(): String
            +setMessage(String): void
            +getLogical_resource_ids(): List<String>
            +setLogical_resource_ids(List<String>): void
            +getLine_numbers(): List<Integer>
            +setLine_numbers(List<Integer>): void
        }

        class CfnNagScanReportReader [[CfnNagScanReportReader.html]] {
            +readReport(InputStream): List<CfnNagScanReport>
        }

        CfnNagScanReport --> CfnNagReport: file_results
        CfnNagReport --> "*" CfnNagViolation: violations
    }

    center footer UMLDoclet 2.0.3-SNAPSHOT, PlantUML 1.2019.06
@enduml
